--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: center;
-  padding: 50px;
+  padding: 50px; */
 }
