--- a/src/components/SmallDiv/smalldiv.css
+++ b/src/components/SmallDiv/smalldiv.css
@@ -1,6 +1,6 @@
 .small-div {
-    position: absolute;
-    /* position: fixed; */
+    /* position: absolute; */
+    position: fixed;
     width: 50px;
     height: 50px;
     background-color: black;
