resizing on four sides

--- a/src/components/LargeDiv/largediv.css
+++ b/src/components/LargeDiv/largediv.css
@@ -1,8 +1,10 @@
 .main-div {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center;
+  justify-content: center; */
   flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
 }
 .large-div {
     position: relative;
@@ -18,10 +20,12 @@
     
 }
 .select-options {
-  margin: 25px;
+  /* margin: 25px; */
   height: 30px;
   width: 150px;
   border: .5px solid black;
+  text-align: center;
+  /* margin-left: 720px; */
 }
 .large-div-drag {
   height: 50px;
@@ -29,5 +33,5 @@
   position: absolute;
   border: .5px solid black;
   top: 0;
-  margin-left: 250;
+  right: 0;
 }
