--- a/src/components/LargeDiv/largediv.css
+++ b/src/components/LargeDiv/largediv.css
@@ -20,7 +20,7 @@
     
 }
 .select-options {
-  /* margin: 25px; */
+  margin: 25px;
   height: 30px;
   width: 150px;
   border: .5px solid black;
@@ -31,6 +31,7 @@
   height: 20px;
   width: 20px;
   position: absolute;
+  border: none;
   border: .5px solid black;
   top: 0;
   right: 0;
